# parker_solar

./: .gitignore  README.md  download_instructions.md  download_wispr.py  main.py  make_wispr_animation.py  make_wispr_lw_animations.py  plot_coho_magplasma.py  pyproject.toml  view_fits_example.py
magplasma/: psp_coho1hr_merged_mag_plasma_20241201_v01.cdf
scripts/: compute_intermittency.py  compute_psd.py  compute_psd_multiple.py  plot_dec24_specific.py  test_epoch.py
switch_backs/: analyze_alpha_switchbacks.py  analyze_full_day_switchbacks.py  analyze_switchbacks_dec24.py  plot_dec24_switchbacks.py  plot_switchbacks.py
