[project]
name = "parker-solar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=8.0.0",
    "cdflib>=1.3.12",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.11.0",
    "mpl-animators>=1.2.4",
    "sunpy>=7.1.2",
    "tqdm>=4.68.3",
]
